--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -5,4 +5,4 @@ set -g terminal-overrides 'xterm:colors=256'
 
 # PowerLine
 run-shell "powerline-daemon -q"
-source "$HOME/.local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+source "${POWERLINE_ROOT}/bindings/tmux/powerline.conf"
