--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,5 +1,9 @@
-#### COLOUR (Solarized dark)
 
+# mouse
+set -g mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# color
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
