--- a/bin/Brewfile
+++ b/bin/Brewfile
@@ -6,7 +6,7 @@ cask "authy"
 cask "clion"
 cask "github"
 cask "iterm2"
-cask "mactex"
+cask "basictex"
 cask "mendeley"
 cask "pycharm"
 cask "slack"
