--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -120,7 +120,6 @@ zstyle ':prezto:module:editor' key-bindings 'emacs'
 POWERLEVEL9K_SHORTEN_DIR_LENGTH=1
 POWERLEVEL9K_SHORTEN_STRATEGY='truncate_to_first_and_last'
 
-POWERLEVEL9K_HOST_TEMPLATE=''
 POWERLEVEL9K_HOST_ICON='\uF109'
 POWERLEVEL9K_SSH_ICON='\uF489'
 
@@ -135,8 +134,11 @@ POWERLEVEL9K_REMOTE_LOCAL_FOREGROUND='black'
 POWERLEVEL9K_REMOTE_LOCAL_BACKGROUND='grey93'
 
 POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(ssh host dir vcs)
-POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(pyenv rbenv nodeenv)
+POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status pyenv rbenv nodeenv)
+POWERLEVEL9K_PROMPT_ON_NEWLINE=true
 POWERLEVEL9K_PROMPT_ADD_NEWLINE=true
+POWERLEVEL9K_MULTILINE_FIRST_PROMPT_PREFIX="%F{cyan}\u256D\u2500%f"
+POWERLEVEL9K_MULTILINE_LAST_PROMPT_PREFIX="%F{014}\u2570%F{cyan}\uF460%F{073}\uF460%F{109}\uF460%f "
 
 # Load Nerd Fonts with Powerlevel9k theme for Zsh
 POWERLEVEL9K_MODE='nerdfont-complete'
