--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -133,7 +133,7 @@ POWERLEVEL9K_HOST_LOCAL_BACKGROUND='032'
 POWERLEVEL9K_REMOTE_LOCAL_FOREGROUND='black'
 POWERLEVEL9K_REMOTE_LOCAL_BACKGROUND='grey93'
 
-POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(ssh host dir vcs)
+POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(host dir vcs)
 POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status pyenv rbenv nodeenv)
 POWERLEVEL9K_PROMPT_ON_NEWLINE=true
 POWERLEVEL9K_PROMPT_ADD_NEWLINE=true
