--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -137,8 +137,8 @@ POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(host dir vcs)
 POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status pyenv rbenv nodeenv)
 POWERLEVEL9K_PROMPT_ON_NEWLINE=true
 POWERLEVEL9K_PROMPT_ADD_NEWLINE=true
-POWERLEVEL9K_MULTILINE_FIRST_PROMPT_PREFIX="%F{cyan}\u256D\u2500%f"
-POWERLEVEL9K_MULTILINE_LAST_PROMPT_PREFIX="%F{014}\u2570%F{cyan}\uF460%F{073}\uF460%F{109}\uF460%f "
+POWERLEVEL9K_MULTILINE_FIRST_PROMPT_PREFIX=""
+POWERLEVEL9K_MULTILINE_LAST_PROMPT_PREFIX="%F{cyan}\uF460%F{073}\uF460%F{109}\uF460%f "
 
 # Load Nerd Fonts with Powerlevel9k theme for Zsh
 POWERLEVEL9K_MODE='nerdfont-complete'
