--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -34,6 +34,7 @@ zstyle ':prezto:load' pmodule \
   'history' \
   'directory' \
   'syntax-highlighting' \
+  'autosuggestions' \
   'spectrum' \
   'utility' \
   'completion' \
