--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -19,6 +19,10 @@ brew "anyenv"
 brew "autoconf"
 brew "pkg-config"
 
+# Python
+brew "libffi"
+brew "sqlite"
+
 #
 cask "atom"
 cask "visual-studio-code"
