--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,3 +1,7 @@
+
+# source
+source "~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+
 # color
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
