--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,6 @@
 
 # source
-source "~/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "${HOME}/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # color
 set-option -g default-terminal screen-256color
