--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,6 @@
 
 # source
-source "${HOME}/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "${HOME}/.anyenv/envs/pyenv/versions/3.7.2/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # color
 set-option -g default-terminal screen-256color
