--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,5 +3,5 @@
 source "${HOME}/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # color
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
