--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -149,7 +149,7 @@ POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status pyenv rbenv nodeenv)
 POWERLEVEL9K_PROMPT_ON_NEWLINE=true
 POWERLEVEL9K_PROMPT_ADD_NEWLINE=true
 POWERLEVEL9K_MULTILINE_FIRST_PROMPT_PREFIX=""
-POWERLEVEL9K_MULTILINE_LAST_PROMPT_PREFIX="%F{cyan}\uF460%F{073}\uF460%F{109}\uF460%f "
+POWERLEVEL9K_MULTILINE_LAST_PROMPT_PREFIX="%F{240}\uF460%F{245}\uF460%F{250}\uF460%f "
 
 # Load Nerd Fonts with Powerlevel9k theme for Zsh
 POWERLEVEL9K_MODE='nerdfont-complete'
