--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -5,3 +5,7 @@ source "${HOME}/.local/lib/python3.7/site-packages/powerline/bindings/tmux/power
 # color
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# mouse
+set -g mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
