--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -9,19 +9,18 @@ brew "tmux"
 brew "vim"
 brew "zsh"
 
-cask "clion"
-cask "pycharm"
 cask "visual-studio-code"
+cask "iterm2"
 
 cask "github"
 cask "docker"
 cask "google-cloud-sdk"
 cask "transmit"
+cask "mactex"
 
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "google-chrome"
-cask "iterm2"
-cask "mactex"
+cask "google-backup-and-sync"
 cask "mendeley"
 cask "slack"
