--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -21,6 +21,5 @@ cask "mactex"
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "google-chrome"
-cask "google-backup-and-sync"
-cask "mendeley"
+cask "mendeley-reference-manager"
 cask "slack"
