--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -21,5 +21,5 @@ cask "mactex"
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "google-chrome"
-cask "mendeley-reference-manager"
+cask "mendeley-desktop"
 cask "slack"
