--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -26,14 +26,11 @@ zstyle ':prezto:module:prompt' theme 'powerlevel10k'
 
 # ===== Tmux =====
 
-# Auto start a session when Zsh is launched in a local terminal.
-zstyle ':prezto:module:tmux:auto-start' local 'yes'
-
 # Auto start a session when Zsh is launched in a SSH connection.
 zstyle ':prezto:module:tmux:auto-start' remote 'yes'
 
 # Integrate with iTerm2.
-zstyle ':prezto:module:tmux:iterm' integrate 'yes'
+#zstyle ':prezto:module:tmux:iterm' integrate 'yes'
 
 
 # ===== Utility =====
