--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,37 @@
-# color
-set -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# mouse
+# zsh
+set-option -g default-shell "${SHELL}"
+
+# Enable RGB colour if running in xterm(1)
+set-option -sa terminal-overrides ",xterm*:Tc"
+
+# Change the default $TERM to tmux-256color
+set -g default-terminal "tmux-256color"
+
+# Turn the mouse on
 set -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# status line を更新する間隔を 1 秒にする
+set-option -g status-interval 1
+
+# statusの最大の長さを指定する。
+set-option -g status-left-length 30
+set-option -g status-right-length 30
+
+# window-status を中央揃えで配置する
+set-option -g status-justify "centre"
+
+set-option -g status-bg "colour235"
+set-option -g status-fg "colour255"
+
+set-option -g status-left "#[fg=colour255,bg=colour243] Session: #S #[default]"
+set-option -g status-right "%m/%d (%a) %H:%M:%S #[default]"
+
+set-window-option -g window-status-format " #I: #W "
+set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
