--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -26,6 +26,9 @@ zstyle ':prezto:module:prompt' theme 'powerlevel10k'
 
 # ===== Tmux =====
 
+# Set the default session name:
+# zstyle ':prezto:module:tmux:session' name 'Default'
+
 # Auto start a session when Zsh is launched in a SSH connection.
 zstyle ':prezto:module:tmux:auto-start' remote 'yes'
 
