--- a/home/.zpreztorc
+++ b/home/.zpreztorc
@@ -27,7 +27,7 @@ zstyle ':prezto:module:prompt' theme 'powerlevel10k'
 # ===== Tmux =====
 
 # Set the default session name:
-# zstyle ':prezto:module:tmux:session' name 'Default'
+zstyle ':prezto:module:tmux:session' name 'Default'
 
 # Auto start a session when Zsh is launched in a SSH connection.
 zstyle ':prezto:module:tmux:auto-start' remote 'yes'
