--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,5 +1,5 @@
 # zsh
-set-option -g default-shell "${SHELL}"
+set-option -g default-shell "/home/narui/.linuxbrew/bin/zsh"
 
 # Enable RGB colour if running in xterm(1)
 set-option -sa terminal-overrides ",xterm*:Tc"
