--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -17,9 +17,11 @@ cask "docker"
 cask "google-cloud-sdk"
 cask "transmit"
 cask "mactex"
+brew "ykman"
 
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "google-chrome"
 cask "mendeley-desktop"
 cask "slack"
+cask "skitch"
