--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -15,13 +15,21 @@ brew "exa"
 cask "visual-studio-code"
 cask "iterm2"
 
+cask "oracle-jdk"
+
 cask "github"
 cask "docker"
 cask "transmit"
+
+cask "postman"
+cask "dbeaver-community"
 
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "google-chrome"
 cask "mendeley-desktop"
+cask "deepl"
 cask "slack"
 cask "skitch"
+cask "yubico-yubikey-manager"
+cask "zoomus"
