--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -1,27 +1,22 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
-
-brew "exiftool"
-
-brew "tmux"
 brew "bat"
 brew "exa"
-
-cask "visual-studio-code"
-cask "iterm2"
-
-cask "github"
-cask "docker"
-cask "transmit"
-
-cask "postman"
-cask "tableplus"
-
+brew "exiftool"
+brew "opensc"
+brew "pyenv"
+brew "tmux"
 cask "adobe-acrobat-reader"
 cask "authy"
+cask "docker"
+cask "github"
 cask "google-chrome"
-cask "mendeley-desktop"
+cask "iterm2"
+cask "mendeley-reference-manager"
+cask "postman"
 cask "slack"
-cask "yubico-yubikey-manager"
+cask "tableplus"
+cask "transmit"
+cask "visual-studio-code"
 cask "zoomus"
