--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -7,6 +7,8 @@ brew "exiftool"
 brew "opensc"
 brew "pyenv"
 brew "tmux"
+brew "vim"
+brew "zsh"
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "docker"
