--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -1,14 +1,19 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "kryptco/tap"
+cask "osxfuse"
 brew "bat"
 brew "exa"
 brew "exiftool"
+brew "newman"
 brew "opensc"
 brew "pyenv"
+brew "sshfs"
 brew "tmux"
 brew "vim"
 brew "zsh"
+brew "kryptco/tap/kr"
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "docker"
@@ -16,8 +21,10 @@ cask "github"
 cask "google-chrome"
 cask "iterm2"
 cask "mendeley-reference-manager"
+cask "openvpn-connect"
 cask "postman"
 cask "slack"
+cask "spotify"
 cask "tableplus"
 cask "transmit"
 cask "visual-studio-code"
