--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -15,6 +15,7 @@ brew "tmux"
 brew "trash-cli"
 brew "vim"
 brew "zsh"
+brew "ripgrep"
 brew "kryptco/tap/kr"
 cask "adobe-acrobat-reader"
 cask "authy"
