--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "home/.vim/pack/plugins/start/vim-gitgutter"]
 	path = home/.vim/pack/plugins/start/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "home/.vim/pack/plugins/start/fugitive"]
+	path = home/.vim/pack/plugins/start/fugitive
+	url = https://tpope.io/vim/fugitive.git
