--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 cask "osxfuse"
+brew "coreutils"↲
 brew "exiftool"
 brew "nvm"
 brew "opensc"
@@ -21,6 +22,5 @@ cask "mendeley-reference-manager"
 cask "openvpn-connect"
 cask "postman"
 cask "slack"
-cask "tableplus"
 cask "visual-studio-code"
 cask "zoomus"
