--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -2,7 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 cask "osxfuse"
-brew "coreutils"↲
+brew "coreutils"
 brew "exiftool"
 brew "nvm"
 brew "opensc"
@@ -15,7 +15,6 @@ brew "zsh"
 cask "adobe-acrobat-reader"
 cask "authy"
 cask "docker"
-cask "github"
 cask "google-chrome"
 cask "iterm2"
 cask "mendeley-reference-manager"
