--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -21,5 +21,6 @@ cask "iterm2"
 cask "mendeley-reference-manager"
 cask "postman"
 cask "slack"
+cask "spotify"
 cask "visual-studio-code"
 cask "zoomus"
