--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -1,13 +1,12 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
-cask "osxfuse"
 brew "coreutils"
 brew "exiftool"
 brew "gcc"
-brew "nvm"
+brew "node"
 brew "opensc"
-brew "pyenv"
+brew "python"
 brew "sshfs"
 brew "tmux"
 brew "trash-cli"
@@ -19,6 +18,7 @@ cask "docker"
 cask "google-chrome"
 cask "iterm2"
 cask "mendeley-reference-manager"
+cask "osxfuse"
 cask "postman"
 cask "slack"
 cask "spotify"
