--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,19 @@
 name: Test
 
-on: [workflow_dispatch]
+on: [push]
 
 jobs:
   ubuntu:
-    runs-on: Ubuntu LTS
-    container: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: Install requirements
-        run: apt-get update && apt-get install -y git curl sudo
-      - name: Create Test user
-        run: useradd -m ubuntu
-      - name: Change Test user
-        run: su ubuntu
+        run: apt-get update && apt-get install -y git curl
+      - name: Install dotfiles
+        run:  bash -c "$(curl -L raw.githubusercontent.com/narui1125/dotfiles/master/install.sh)"
+  macos:
+    runs-on: macos-latest
+    steps:
+      - name: Install requirements
+        run: xcode-select --install
       - name: Install dotfiles
         run:  bash -c "$(curl -L raw.githubusercontent.com/narui1125/dotfiles/master/install.sh)"
