--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install requirements
-        run: sudo apt-get update && apt-get install -y git curl
+        run: sudo apt-get update && sudo apt-get install -y git curl
       - name: Install dotfiles
         run:  bash -c "$(curl -L raw.githubusercontent.com/narui1125/dotfiles/master/install.sh)"
   macos:
