--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -6,6 +6,8 @@ brew "exiftool"
 brew "gcc"
 brew "node"
 brew "opensc"
+brew "openjdk@8"
+brew "mysql@5.7"
 brew "python"
 brew "sshfs"
 brew "tmux"
@@ -17,6 +19,7 @@ cask "authy"
 cask "docker"
 cask "google-chrome"
 cask "iterm2"
+cask "intellij-idea-ce"
 cask "mendeley-reference-manager"
 cask "osxfuse"
 cask "postman"
